@@ -1,16 +1,15 @@
 package com.rhynia.ochelper.controller;
 
-import com.rhynia.ochelper.accessor.DatabaseAccessor;
 import com.rhynia.ochelper.accessor.PathAccessor;
 import com.rhynia.ochelper.component.DataProcessor;
 import com.rhynia.ochelper.config.CommonValue;
+import com.rhynia.ochelper.database.DatabaseAccessor;
 import com.rhynia.ochelper.var.AECPU;
-import com.rhynia.ochelper.var.AEFluidData;
-import com.rhynia.ochelper.var.AEFluidDisplay;
-import com.rhynia.ochelper.var.AEItem;
-import com.rhynia.ochelper.var.AEItemData;
-import com.rhynia.ochelper.var.AEItemDisplay;
+import com.rhynia.ochelper.var.element.AeDataSetObj;
+import com.rhynia.ochelper.var.element.AeDisplayItemObj;
+import com.rhynia.ochelper.var.element.AeReportItemObj;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -25,14 +24,13 @@ import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static com.rhynia.ochelper.util.LocalizationMap.NAME_MAP_FLUID_SWITCH;
 import static com.rhynia.ochelper.util.LocalizationMap.UNI_NAME_MAP_FLUID;
 import static com.rhynia.ochelper.util.LocalizationMap.UNI_NAME_MAP_ITEM;
-import static com.rhynia.ochelper.util.LocalizationMap.UNI_NAME_MAP_ITEM_SWITCH;
 
+@Slf4j
 @Controller
 @RequiredArgsConstructor
 public class AppengController {
@@ -42,6 +40,9 @@ public class AppengController {
     private final DatabaseAccessor da;
     private final DataProcessor dp;
 
+    private final DateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+    private final DecimalFormat nf = new DecimalFormat("0.000%");
+
     @GetMapping("ae-storage-info")
     public String getInfoPageIndex(Model model) {
 
@@ -49,117 +50,110 @@ public class AppengController {
 
         var pair = da.getLatestData();
 
-        List<AEItemDisplay> items = pair.getLeft();
-        List<AEFluidDisplay> fluids = pair.getRight();
+        var tmp1 = pair.getLeft();
+        var tmp2 = pair.getRight();
 
-        List<AEItemDisplay> itemList = new ArrayList<>();
-        List<Pair<AEFluidDisplay, String>> fluidList = new ArrayList<>();
+        var items = tmp1.stream()
+                .filter(obj -> !obj.getUn().endsWith("drop$0"))
+                .filter(obj -> !obj.getSizeRaw().equals("0"))
+                .toList();
 
-        for (AEItemDisplay item : items) {
-            if (item.getUn().endsWith("drop$0")) continue;
-            if (Objects.equals(item.getSizeRaw(), "0")) continue;
-            if (item.getLocal() == null) {
-                AEItemDisplay missing = new AEItemDisplay(item.getUn(), UNI_NAME_MAP_ITEM_SWITCH.getOrDefault(item.getUn(), item.getUn()), item.getSizeRaw());
-                itemList.add(missing);
-                continue;
-            }
-            itemList.add(item);
-        }
-
-        for (AEFluidDisplay fluid : fluids) {
-            String localSwitched = NAME_MAP_FLUID_SWITCH.getOrDefault(fluid.getLocal(), fluid.getLocal());
-            fluidList.add(Pair.of(fluid, localSwitched));
-        }
+        var fluids = tmp2.stream()
+                .filter(obj -> !obj.getSizeRaw().equals("0"))
+                .map(obj -> Pair.of(obj, NAME_MAP_FLUID_SWITCH.getOrDefault(obj.getLocal(), obj.getLocal())))
+                .toList();
 
         model.addAttribute("iconPath", iconPath);
-        model.addAttribute("itemList", itemList);
-        model.addAttribute("fluidList", fluidList);
+        model.addAttribute("itemList", items);
+        model.addAttribute("fluidList", fluids);
 
         return "ae/ae-storage-info";
     }
 
     @GetMapping("insight-item")
     public String transportItemData(String it_un, String latest, Model model) throws ParseException {
-        DateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-        DecimalFormat nf = new DecimalFormat("0.000%");
-        long current = System.currentTimeMillis();
 
         if (it_un == null) return getInfoPageIndex(model);
 
         int insight_size = cv.getInsightSize();
-        var list = da.getItemDataLateN(it_un, insight_size);
-        long sync = current - df.parse(list.get(0).getTime()).getTime();
-        String nameLocal = UNI_NAME_MAP_ITEM_SWITCH.getOrDefault(it_un, it_un);
-        String imgLink = pa.getPath().getIconPanelPath() + nameLocal + ".png";
-        ArrayList<BigDecimal[]> bdl = new ArrayList<>();
+        var name = "Insight - " + UNI_NAME_MAP_ITEM.get(it_un);
+        var imgPath = pa.getPath().getIconPanelPath();
+        var original = da.getAeItemDataObjN(it_un, insight_size);
 
-        String name = "Insight - " + UNI_NAME_MAP_ITEM.get(it_un);
+        // First element latest
+        ArrayList<BigDecimal[]> tmpBdl = new ArrayList<>();
+        var processed = original.sorted(Comparator.comparingLong(AeDataSetObj::getId).reversed())
+                .map(AeDataSetObj::getAeItemDisplayObj)
+                .peek(obj -> obj.setImgPath(imgPath + obj.getLocal() + ".png"))
+                .peek(obj -> {
+                    BigDecimal[] tmpArray = new BigDecimal[2];
+                    try {
+                        tmpArray[0] = BigDecimal.valueOf(df.parse(obj.getTime()).getTime());
+                    } catch (ParseException e) {
+                        log.error("Error caught in reading date: ", e);
+                    }
+                    tmpArray[1] = obj.getSize();
+                    tmpBdl.add(tmpArray);
+                }).toList();
 
-        for (AEItemData aeItemData : list) {
-            BigDecimal[] temp = new BigDecimal[2];
-            temp[0] = BigDecimal.valueOf(df.parse(aeItemData.getTime()).getTime());
-            temp[1] = new BigDecimal(aeItemData.getSize());
-            bdl.add(temp);
-        }
+        var older = processed.getLast().getSize();
+        var newer = processed.getFirst().getSize();
+        var rate_raw = newer.divide(older, 6, RoundingMode.FLOOR).subtract(BigDecimal.ONE);
+        var rateDisplay = nf.format(rate_raw);
+        var increase = rate_raw.compareTo(BigDecimal.ZERO) > -1;
 
-        BigDecimal older = new BigDecimal(list.get(list.size() - 1).getSize());
-        BigDecimal newer = new BigDecimal(list.get(0).getSize());
-        BigDecimal rate_raw = newer.divide(older, 6, RoundingMode.FLOOR).subtract(BigDecimal.ONE);
-        String rate = nf.format(rate_raw);
-        boolean increase = rate_raw.compareTo(BigDecimal.ZERO) > -1;
-
-        model.addAttribute("bdl", bdl.toArray(new BigDecimal[0][0]));
+        model.addAttribute("bdl", tmpBdl.toArray(new BigDecimal[0][0]));
         model.addAttribute("name_to_display", name);
         model.addAttribute("size_latest", latest);
-        model.addAttribute("rate", rate);
+        model.addAttribute("rate", rateDisplay);
         model.addAttribute("increase", increase);
         model.addAttribute("insight_size", insight_size);
-        model.addAttribute("imgLink", imgLink);
-        model.addAttribute("list", list);
+        model.addAttribute("processed", processed);
 
         return "ae/ae-storage-insight";
     }
 
     @GetMapping("insight-fluid")
-    public String transportFluidData(String it_un, String latest, Model model) throws ParseException {
-        DateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-        DecimalFormat nf = new DecimalFormat("0.000%");
-        long current = System.currentTimeMillis();
+    public String transportFluidData(String it_un, String latest, Model model) {
 
         if (it_un == null) return getInfoPageIndex(model);
 
         int insight_size = cv.getInsightSize();
-        var list = da.getFluidDataLateN(it_un, insight_size);
-        long sync = current - df.parse(list.getFirst().getTime()).getTime();
-        String nameLocal, nameLocalSwitch;
-        nameLocal = UNI_NAME_MAP_FLUID.get(it_un);
-        nameLocalSwitch = NAME_MAP_FLUID_SWITCH.getOrDefault(nameLocal, nameLocal);
-        String imgLink = pa.getPath().getIconPanelPath() + nameLocalSwitch + "单元.png";
-        ArrayList<BigDecimal[]> bdl = new ArrayList<>();
+        var name = "Insight - " + UNI_NAME_MAP_FLUID.get(it_un);
+        var imgPath = pa.getPath().getIconPanelPath();
+        var original = da.getAeFluidDataObjN(it_un, insight_size);
 
-        String name = "Insight - " + nameLocal;
+        // First element latest
+        ArrayList<BigDecimal[]> tmpBdl = new ArrayList<>();
+        var processed = original.sorted(Comparator.comparingLong(AeDataSetObj::getId).reversed())
+                .map(AeDataSetObj::getAeFluidDisplayObj)
+                .peek(obj -> obj.setImgPath(imgPath
+                        + NAME_MAP_FLUID_SWITCH.getOrDefault(obj.getLocal(), obj.getLocal())
+                        + "单元.png"))
+                .peek(obj -> {
+                    BigDecimal[] tmpArray = new BigDecimal[2];
+                    try {
+                        tmpArray[0] = BigDecimal.valueOf(df.parse(obj.getTime()).getTime());
+                    } catch (ParseException e) {
+                        log.error("Error caught in reading date: ", e);
+                    }
+                    tmpArray[1] = obj.getSize();
+                    tmpBdl.add(tmpArray);
+                }).toList();
 
-        for (AEFluidData aeFluidData : list) {
-            BigDecimal[] temp = new BigDecimal[2];
-            temp[0] = BigDecimal.valueOf(df.parse(aeFluidData.getTime()).getTime());
-            temp[1] = new BigDecimal(aeFluidData.getSize());
-            bdl.add(temp);
-        }
-
-        BigDecimal older = new BigDecimal(list.getLast().getSize());
-        BigDecimal newer = new BigDecimal(list.getFirst().getSize());
-        BigDecimal rate_raw = newer.divide(older, 6, RoundingMode.FLOOR).subtract(BigDecimal.ONE);
-        String rate = nf.format(rate_raw);
+        var older = processed.getLast().getSize();
+        var newer = processed.getFirst().getSize();
+        var rate_raw = newer.divide(older, 6, RoundingMode.FLOOR).subtract(BigDecimal.ONE);
+        var rateDisplay = nf.format(rate_raw);
         boolean increase = rate_raw.compareTo(BigDecimal.ZERO) > -1;
 
-        model.addAttribute("bdl", bdl.toArray(new BigDecimal[0][0]));
+        model.addAttribute("bdl", tmpBdl.toArray(new BigDecimal[0][0]));
         model.addAttribute("name_to_display", name);
         model.addAttribute("size_latest", latest);
-        model.addAttribute("rate", rate);
+        model.addAttribute("rate", rateDisplay);
         model.addAttribute("increase", increase);
         model.addAttribute("insight_size", insight_size);
-        model.addAttribute("imgLink", imgLink);
-        model.addAttribute("list", list);
+        model.addAttribute("processed", processed);
 
         return "ae/ae-storage-insight";
     }
@@ -174,26 +168,30 @@ public class AppengController {
 
     @GetMapping("ae-cpu-detail")
     public String requestCpuDetail(int cpuid, Model model) {
-        String iconPath = pa.getPath().getIconPanelPath();
+        String imgPath = pa.getPath().getIconPanelPath();
+
         var pair = dp.requestAeCpuDetail(cpuid);
         var listP = pair.getLeft();
         var finalOutput = pair.getRight().getDisplay();
 
-        List<AEItemDisplay> active = listP[0].stream()
-                .map(AEItem::getDisplay)
-                .collect(Collectors.toList());
-        List<AEItemDisplay> store = listP[1].stream()
-                .map(AEItem::getDisplay)
-                .collect(Collectors.toList());
-        List<AEItemDisplay> pending = listP[2].stream()
-                .map(AEItem::getDisplay)
-                .collect(Collectors.toList());
+        List<AeDisplayItemObj> active = listP[0].stream()
+                .map(AeReportItemObj::getDisplay)
+                .peek(obj -> obj.setImgPath(imgPath + obj.getLocal() + ".png"))
+                .toList();
+        List<AeDisplayItemObj> store = listP[1].stream()
+                .map(AeReportItemObj::getDisplay)
+                .peek(obj -> obj.setImgPath(imgPath + obj.getLocal() + ".png"))
+                .toList();
+        List<AeDisplayItemObj> pending = listP[2].stream()
+                .map(AeReportItemObj::getDisplay)
+                .peek(obj -> obj.setImgPath(imgPath + obj.getLocal() + ".png"))
+                .toList();
 
-        model.addAttribute("iconPath", iconPath);
         model.addAttribute("active", active);
         model.addAttribute("store", store);
         model.addAttribute("pending", pending);
         model.addAttribute("final", finalOutput);
+
         return "ae/ae-cpu-detail";
     }
 
